src/run/workflow/snapshots/harness__run__workflow__tests__snapshot_state_after_cluster_prepared.snap
---
source: src/run/workflow/mod.rs
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "last_event": "ClusterPrepared",
  "schema_version": 2,
  "state": {
    "history": [
      {
        "event": "cluster-prepared",
        "from": "bootstrap",
        "timestamp": "REDACTED",
        "to": "preflight"
      }
    ],
    "phase": "preflight",
    "preflight": {
      "status": "pending"
    },
    "updated_at": "REDACTED"
  },
  "transition_count": 1,
  "updated_at": "REDACTED"
}
